# claude-code

./: .gitignore  README.md  conftest.py  main.py  notepad.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: commit-push.md
.claude/ollama-chat-test/: SKILL.md
1.basics/: sdlc.md
2. claude.md/: .env.example  CLAUDE.md  README.md  config.py  main.py  models.py  pyproject.toml  test_weather.py  weather.py
chat/: __init__.py  client.py  conversation.py  exceptions.py  renderer.py  repl.py
chat/tests/: __init__.py  conftest.py  test_client.py  test_conversation.py  test_main.py  test_renderer.py  test_repl.py
concepts/: 1.basics.md  2.claude.md  3.skills.md  4.mcps.md  5.sub-agents.md  6.modes.md  7.version-management.md  8.commands.md
specs/: engineering_design_doc.md  prd.md  project_status.md
